整体完成，并添加了一些其他功能

--- a/service-gateway/pom.xml
+++ b/service-gateway/pom.xml
@@ -16,6 +16,7 @@
             <groupId>com.atguigu.yygh</groupId>
             <artifactId>common-util</artifactId>
             <version>1.0</version>
+            <type>jar</type>
         </dependency>
 
         <dependency>
@@ -29,5 +30,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>service-gateway</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
