--- a/service/pom.xml
+++ b/service/pom.xml
@@ -75,12 +75,12 @@
         </dependency>-->
     </dependencies>
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-        </plugins>
+        </plugins>-->
         <resources>
             <resource>
                 <directory>src/main/java</directory>
