--- a/service/service-oss/pom.xml
+++ b/service/service-oss/pom.xml
@@ -28,5 +28,13 @@
             <artifactId>joda-time</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>service-oss</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
