--- a/service/service-user/pom.xml
+++ b/service/service-user/pom.xml
@@ -22,5 +22,13 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <finalName>service-user</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
