--- a/service/service-order/src/main/resources/application.properties
+++ b/service/service-order/src/main/resources/application.properties
@@ -7,20 +7,20 @@ spring.profiles.active=dev
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://jiacloud.ml:3306/yygh_order?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=jiachenlin
+spring.datasource.url=jdbc:mysql://:3306/yygh_order?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=
+spring.datasource.password=
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-spring.data.mongodb.host=35.194.239.246
+spring.data.mongodb.host=
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=yygh_hosp
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb.password=jiachenlin
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 
 # nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
@@ -29,18 +29,18 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 mybatis-plus.mapper-locations= classpath:com/atguigu/yygh/order/mapper/xml/*.xml
 
 #rabbitMQ
-spring.rabbitmq.host=143.198.132.82
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=Jia@1314
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 spring.rabbitmq.virtual-host=my_vhost
 
 #redis配置
-spring.redis.host=35.194.239.246
+spring.redis.host=
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
-spring.redis.password=Jia@1314
+spring.redis.password=
 
 spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
