--- a/service/service-oss/src/main/resources/application.properties
+++ b/service/service-oss/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #阿里云oss
 aliyun.oss.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.accessKey=LTAI5t5aBxtiqZf3JEj8kw2H
-aliyun.oss.secret=Rwl9X8IKHEcYNWklubUHgqWeq55rxY
+aliyun.oss.accessKey=
+aliyun.oss.secret=
 aliyun.oss.bucket=jiaboke-yygh
