--- a/service/service-task/src/main/resources/application.properties
+++ b/service/service-task/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.profiles.active=dev
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #rabbitMQ
-spring.rabbitmq.host=143.198.132.82
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=Jia@1314
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 spring.rabbitmq.virtual-host=my_vhost
