--- a/service/service-user/src/main/resources/application.properties
+++ b/service/service-user/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 # mysql数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://jiacloud.ml:3306/yygh_user?characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=jiachenlin
+spring.datasource.url=jdbc:mysql://:3306/yygh_user?characterEncoding=utf-8&useSSL=false
+spring.datasource.username=
+spring.datasource.password=
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
@@ -24,16 +24,16 @@ mybatis-plus.mapper-locations=classpath:com/atguigu/yygh/user/mapper/xml/*.xml
 
 #配置邮箱服务
 spring.mail.host=smtp.qq.com
-spring.mail.username=779943132@qq.com
-spring.mail.password= piwuiuvenwkybbjc
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 #redis配置
-spring.redis.host=35.194.239.246
+spring.redis.host=
 spring.redis.port=6379
 spring.redis.database= 0
 spring.redis.timeout=1800000
-spring.redis.password=Jia@1314
+spring.redis.password=
 
 spring.redis.lettuce.pool.max-active=20
 spring.redis.lettuce.pool.max-wait=-1
@@ -50,10 +50,10 @@ wx.open.redirect_url=http://guli.shop/api/ucenter/wx/callback
 yygh.baseUrl=http://localhost:3000
 
 #rabbitMQ
-spring.rabbitmq.host=143.198.132.82
+spring.rabbitmq.host=
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=Jia@1314
+spring.rabbitmq.username=
+spring.rabbitmq.password=
 spring.rabbitmq.virtual-host=my_vhost
 
 
